Add JDK17 profile, just in case.